[package]
name = "xiapi-sys"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Unsafe low-level ffi bindings to the XIMEA API"
homepage = "https://www.ximea.com"
repository = "https://github.com/Ximea-GmbH/xiapi-sys"
keywords = ["bindings", "camera", "image", "ximea"]
categories = ["external-ffi-bindings"]

[dependencies]
serial_test = "3.0.0"

[build-dependencies]
bindgen = "0.69.2"
